--- a/002-progress steps/style.css
+++ b/002-progress steps/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .progress-container::before {
-  content: ""; /* Mandatory with ::before */
+  content: "";
   background-color: var(--line-border-empty);
   position: absolute;
   top: 50%;
